--- a/src/modules/Header/LeftHeader/style.scss
+++ b/src/modules/Header/LeftHeader/style.scss
@@ -9,7 +9,7 @@
 #energy-drink {
   border: 0;
   //noinspection CssUnknownTarget
-  background: transparent url(/static/energy_drink.png) no-repeat center;
+  background: transparent url(/static/header/energy_drink.png) no-repeat center;
   width: 50px;
   height: 50px;
   cursor: pointer;
